deployment/k8s/overlays/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <product_name>
  labels:
    tags.datadoghq.com/env: staging
spec:
  template:
    metadata:
      labels:
        tags.datadoghq.com/env: staging
