deployment/k8s/overlays/staging/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-externalnamespace
  namespace: <team_name>-staging-<product_name>
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: projectcontour
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: contour-private
    ports:
    - port: <container_port>
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: <product_name>
  policyTypes:
  - Ingress
